crates/lspf-analysis-core/tests/snapshots/fixtures__nested.rs.snap
---
source: crates/lspf-analysis-core/tests/fixtures.rs
expression: analyze(name)
---
metrics:
  name: "[filepath]"
  start_line: 1
  end_line: 21
  kind: unit
  spaces:
    - name: classify
      start_line: 1
      end_line: 21
      kind: function
      spaces: []
      metrics:
        nargs:
          total_functions: 5
          total_closures: 0
          average_functions: 5
          average_closures: 0
          total: 5
          average: 5
          functions_min: 5
          functions_max: 5
          closures_min: 0
          closures_max: 0
        nexits:
          sum: 1
          average: 1
          min: 1
          max: 1
        cognitive:
          sum: 16
          average: 16
          min: 16
          max: 16
        cyclomatic:
          sum: 8
          average: 8
          min: 8
          max: 8
        halstead:
          n1: 16
          N1: 52
          n2: 14
          N2: 36
          length: 88
          estimated_program_length: 117.303
          purity_ratio: 1.333
          vocabulary: 30
          volume: 431.806
          difficulty: 20.571
          level: 0.049
          effort: 8882.874
          time: 493.493
          bugs: 0.143
        loc:
          sloc: 21
          ploc: 21
          lloc: 13
          cloc: 0
          blank: 0
          sloc_average: 21
          ploc_average: 21
          lloc_average: 13
          cloc_average: 0
          blank_average: 0
          sloc_min: 21
          sloc_max: 21
          cloc_min: 0
          cloc_max: 0
          ploc_min: 21
          ploc_max: 21
          lloc_min: 13
          lloc_max: 13
          blank_min: 0
          blank_max: 0
        nom:
          functions: 1
          closures: 0
          functions_average: 1
          closures_average: 0
          total: 1
          average: 1
          functions_min: 1
          functions_max: 1
          closures_min: 0
          closures_max: 0
        mi:
          mi_original: 88.285
          mi_sei: 52.482
          mi_visual_studio: 51.629
        abc:
          assignments: 0
          branches: 0
          conditions: 0
          magnitude: 0
          assignments_average: 0
          branches_average: 0
          conditions_average: 0
          assignments_min: 0
          assignments_max: 0
          branches_min: 0
          branches_max: 0
          conditions_min: 0
          conditions_max: 0
        working_memory:
          sum: 7
          average: 7
          min: 7
          max: 7
  metrics:
    nargs:
      total_functions: 5
      total_closures: 0
      average_functions: 5
      average_closures: 0
      total: 5
      average: 5
      functions_min: 0
      functions_max: 5
      closures_min: 0
      closures_max: 0
    nexits:
      sum: 1
      average: 1
      min: 0
      max: 1
    cognitive:
      sum: 16
      average: 16
      min: 0
      max: 16
    cyclomatic:
      sum: 9
      average: 4.5
      min: 1
      max: 8
    halstead:
      n1: 16
      N1: 52
      n2: 14
      N2: 36
      length: 88
      estimated_program_length: 117.303
      purity_ratio: 1.333
      vocabulary: 30
      volume: 431.806
      difficulty: 20.571
      level: 0.049
      effort: 8882.874
      time: 493.493
      bugs: 0.143
    loc:
      sloc: 21
      ploc: 21
      lloc: 13
      cloc: 0
      blank: 0
      sloc_average: 10.5
      ploc_average: 10.5
      lloc_average: 6.5
      cloc_average: 0
      blank_average: 0
      sloc_min: 21
      sloc_max: 21
      cloc_min: 0
      cloc_max: 0
      ploc_min: 21
      ploc_max: 21
      lloc_min: 13
      lloc_max: 13
      blank_min: 0
      blank_max: 0
    nom:
      functions: 1
      closures: 0
      functions_average: 0.5
      closures_average: 0
      total: 1
      average: 0.5
      functions_min: 0
      functions_max: 1
      closures_min: 0
      closures_max: 0
    mi:
      mi_original: 88.055
      mi_sei: 52.252
      mi_visual_studio: 51.494
    abc:
      assignments: 0
      branches: 0
      conditions: 0
      magnitude: 0
      assignments_average: 0
      branches_average: 0
      conditions_average: 0
      assignments_min: 0
      assignments_max: 0
      branches_min: 0
      branches_max: 0
      conditions_min: 0
      conditions_max: 0
    working_memory:
      sum: 7
      average: 7
      min: 0
      max: 7
health:
  path: "[filepath]"
  quality: 60.646
  grade: good
  maintainability_index: 51.494
  functions:
    - name: classify
      start_line: 1
      end_line: 21
      quality: 60.646
      grade: good
      scores:
        complexity: 16
        complexity_score: 46.778
        length: 13
        length_score: 84.191
        working_memory: 7
        working_memory_score: 56.637
