crates/lspf-analysis-core/tests/snapshots/fixtures__simple.py.snap
---
source: crates/lspf-analysis-core/tests/fixtures.rs
expression: analyze(name)
---
metrics:
  name: "[filepath]"
  start_line: 1
  end_line: 12
  kind: unit
  spaces:
    - name: add
      start_line: 1
      end_line: 2
      kind: function
      spaces: []
      metrics:
        nargs:
          total_functions: 2
          total_closures: 0
          average_functions: 2
          average_closures: 0
          total: 2
          average: 2
          functions_min: 2
          functions_max: 2
          closures_min: 0
          closures_max: 0
        nexits:
          sum: 1
          average: 1
          min: 1
          max: 1
        cognitive:
          sum: 0
          average: 0
          min: 0
          max: 0
        cyclomatic:
          sum: 1
          average: 1
          min: 1
          max: 1
        halstead:
          n1: 4
          N1: 4
          n2: 3
          N2: 5
          length: 9
          estimated_program_length: 12.755
          purity_ratio: 1.417
          vocabulary: 7
          volume: 25.266
          difficulty: 3.333
          level: 0.3
          effort: 84.221
          time: 4.679
          bugs: 0.006
        loc:
          sloc: 2
          ploc: 2
          lloc: 1
          cloc: 0
          blank: 0
          sloc_average: 2
          ploc_average: 2
          lloc_average: 1
          cloc_average: 0
          blank_average: 0
          sloc_min: 2
          sloc_max: 2
          cloc_min: 0
          cloc_max: 0
          ploc_min: 2
          ploc_max: 2
          lloc_min: 1
          lloc_max: 1
          blank_min: 0
          blank_max: 0
        nom:
          functions: 1
          closures: 0
          functions_average: 1
          closures_average: 0
          total: 1
          average: 1
          functions_min: 1
          functions_max: 1
          closures_min: 0
          closures_max: 0
        mi:
          mi_original: 142.748
          mi_sei: 130.342
          mi_visual_studio: 83.478
        working_memory:
          sum: 2
          average: 2
          min: 2
          max: 2
    - name: classify
      start_line: 5
      end_line: 12
      kind: function
      spaces: []
      metrics:
        nargs:
          total_functions: 4
          total_closures: 0
          average_functions: 4
          average_closures: 0
          total: 4
          average: 4
          functions_min: 4
          functions_max: 4
          closures_min: 0
          closures_max: 0
        nexits:
          sum: 1
          average: 1
          min: 1
          max: 1
        cognitive:
          sum: 10
          average: 10
          min: 10
          max: 10
        cyclomatic:
          sum: 5
          average: 5
          min: 5
          max: 5
        halstead:
          n1: 7
          N1: 18
          n2: 11
          N2: 21
          length: 39
          estimated_program_length: 57.705
          purity_ratio: 1.48
          vocabulary: 18
          volume: 162.627
          difficulty: 6.682
          level: 0.15
          effort: 1086.645
          time: 60.369
          bugs: 0.035
        loc:
          sloc: 8
          ploc: 8
          lloc: 7
          cloc: 0
          blank: 0
          sloc_average: 8
          ploc_average: 8
          lloc_average: 7
          cloc_average: 0
          blank_average: 0
          sloc_min: 8
          sloc_max: 8
          cloc_min: 0
          cloc_max: 0
          ploc_min: 8
          ploc_max: 8
          lloc_min: 7
          lloc_max: 7
          blank_min: 0
          blank_max: 0
        nom:
          functions: 1
          closures: 0
          functions_average: 1
          closures_average: 0
          total: 1
          average: 1
          functions_min: 1
          functions_max: 1
          closures_min: 0
          closures_max: 0
        mi:
          mi_original: 109.687
          mi_sei: 83.054
          mi_visual_studio: 64.145
        working_memory:
          sum: 5
          average: 5
          min: 5
          max: 5
  metrics:
    nargs:
      total_functions: 6
      total_closures: 0
      average_functions: 3
      average_closures: 0
      total: 6
      average: 3
      functions_min: 0
      functions_max: 4
      closures_min: 0
      closures_max: 0
    nexits:
      sum: 2
      average: 1
      min: 0
      max: 1
    cognitive:
      sum: 10
      average: 5
      min: 0
      max: 10
    cyclomatic:
      sum: 7
      average: 2.333
      min: 1
      max: 5
    halstead:
      n1: 7
      N1: 22
      n2: 12
      N2: 26
      length: 48
      estimated_program_length: 62.671
      purity_ratio: 1.306
      vocabulary: 19
      volume: 203.901
      difficulty: 7.583
      level: 0.132
      effort: 1546.246
      time: 85.903
      bugs: 0.045
    loc:
      sloc: 12
      ploc: 10
      lloc: 8
      cloc: 0
      blank: 2
      sloc_average: 4
      ploc_average: 3.333
      lloc_average: 2.667
      cloc_average: 0
      blank_average: 0.667
      sloc_min: 2
      sloc_max: 8
      cloc_min: 0
      cloc_max: 0
      ploc_min: 2
      ploc_max: 8
      lloc_min: 1
      lloc_max: 7
      blank_min: 0
      blank_max: 0
    nom:
      functions: 2
      closures: 0
      functions_average: 0.667
      closures_average: 0
      total: 2
      average: 0.667
      functions_min: 0
      functions_max: 1
      closures_min: 0
      closures_max: 0
    mi:
      mi_original: 101.483
      mi_sei: 71.421
      mi_visual_studio: 59.347
    working_memory:
      sum: 7
      average: 3.5
      min: 0
      max: 5
health:
  path: "[filepath]"
  quality: 75.772
  grade: good
  maintainability_index: 59.347
  functions:
    - name: add
      start_line: 1
      end_line: 2
      quality: 94.528
      grade: excellent
      scores:
        control_flow:
          name: control flow
          score: 99.01
          measures:
            - name: cognitive complexity
              value: 0
              threshold: 15
              score: 100
            - name: cyclomatic complexity
              value: 1
              threshold: 10
              score: 99.01
        size:
          name: size
          score: 99.889
          measures:
            - name: statements
              value: 1
              threshold: 30
              score: 99.889
        vocabulary:
          name: vocabulary load
          score: 92.837
          measures:
            - name: working memory
              value: 2
              threshold: 8
              score: 94.118
            - name: Halstead difficulty
              value: 3.333
              threshold: 12
              score: 92.837
        interface:
          name: interface
          score: 80
          measures:
            - name: parameters
              value: 2
              threshold: 4
              score: 80
    - name: classify
      start_line: 5
      end_line: 12
      quality: 73.092
      grade: good
      scores:
        control_flow:
          name: control flow
          score: 69.231
          measures:
            - name: cognitive complexity
              value: 10
              threshold: 15
              score: 69.231
            - name: cyclomatic complexity
              value: 5
              threshold: 10
              score: 80
        size:
          name: size
          score: 94.837
          measures:
            - name: statements
              value: 7
              threshold: 30
              score: 94.837
        vocabulary:
          name: vocabulary load
          score: 71.91
          measures:
            - name: working memory
              value: 5
              threshold: 8
              score: 71.91
            - name: Halstead difficulty
              value: 6.682
              threshold: 12
              score: 76.333
        interface:
          name: interface
          score: 50
          measures:
            - name: parameters
              value: 4
              threshold: 4
              score: 50
