crates/lspf-analysis-core/tests/snapshots/fixtures__simple.rs.snap
---
source: crates/lspf-analysis-core/tests/fixtures.rs
expression: analyze(name)
---
metrics:
  name: "[filepath]"
  start_line: 1
  end_line: 7
  kind: unit
  spaces:
    - name: add
      start_line: 1
      end_line: 3
      kind: function
      spaces: []
      metrics:
        nargs:
          total_functions: 2
          total_closures: 0
          average_functions: 2
          average_closures: 0
          total: 2
          average: 2
          functions_min: 2
          functions_max: 2
          closures_min: 0
          closures_max: 0
        nexits:
          sum: 1
          average: 1
          min: 1
          max: 1
        cognitive:
          sum: 0
          average: 0
          min: 0
          max: 0
        cyclomatic:
          sum: 1
          average: 1
          min: 1
          max: 1
        halstead:
          n1: 7
          N1: 9
          n2: 3
          N2: 5
          length: 14
          estimated_program_length: 24.406
          purity_ratio: 1.743
          vocabulary: 10
          volume: 46.507
          difficulty: 5.833
          level: 0.171
          effort: 271.291
          time: 15.072
          bugs: 0.014
        loc:
          sloc: 3
          ploc: 3
          lloc: 0
          cloc: 0
          blank: 0
          sloc_average: 3
          ploc_average: 3
          lloc_average: 0
          cloc_average: 0
          blank_average: 0
          sloc_min: 3
          sloc_max: 3
          cloc_min: 0
          cloc_max: 0
          ploc_min: 3
          ploc_max: 3
          lloc_min: 0
          lloc_max: 0
          blank_min: 0
          blank_max: 0
        nom:
          functions: 1
          closures: 0
          functions_average: 1
          closures_average: 0
          total: 1
          average: 1
          functions_min: 1
          functions_max: 1
          closures_min: 0
          closures_max: 0
        mi:
          mi_original: 133.007
          mi_sei: 116.289
          mi_visual_studio: 77.782
        working_memory:
          sum: 2
          average: 2
          min: 2
          max: 2
    - name: describe
      start_line: 5
      end_line: 7
      kind: function
      spaces: []
      metrics:
        nargs:
          total_functions: 1
          total_closures: 0
          average_functions: 1
          average_closures: 0
          total: 1
          average: 1
          functions_min: 1
          functions_max: 1
          closures_min: 0
          closures_max: 0
        nexits:
          sum: 1
          average: 1
          min: 1
          max: 1
        cognitive:
          sum: 2
          average: 2
          min: 2
          max: 2
        cyclomatic:
          sum: 2
          average: 2
          min: 2
          max: 2
        halstead:
          n1: 8
          N1: 11
          n2: 6
          N2: 7
          length: 18
          estimated_program_length: 39.51
          purity_ratio: 2.195
          vocabulary: 14
          volume: 68.532
          difficulty: 4.667
          level: 0.214
          effort: 319.818
          time: 17.768
          bugs: 0.016
        loc:
          sloc: 3
          ploc: 3
          lloc: 1
          cloc: 0
          blank: 0
          sloc_average: 3
          ploc_average: 3
          lloc_average: 1
          cloc_average: 0
          blank_average: 0
          sloc_min: 3
          sloc_max: 3
          cloc_min: 0
          cloc_max: 0
          ploc_min: 3
          ploc_max: 3
          lloc_min: 1
          lloc_max: 1
          blank_min: 0
          blank_max: 0
        nom:
          functions: 1
          closures: 0
          functions_average: 1
          closures_average: 0
          total: 1
          average: 1
          functions_min: 1
          functions_max: 1
          closures_min: 0
          closures_max: 0
        mi:
          mi_original: 130.76
          mi_sei: 113.15
          mi_visual_studio: 76.468
        working_memory:
          sum: 1
          average: 1
          min: 1
          max: 1
  metrics:
    nargs:
      total_functions: 3
      total_closures: 0
      average_functions: 1.5
      average_closures: 0
      total: 3
      average: 1.5
      functions_min: 0
      functions_max: 2
      closures_min: 0
      closures_max: 0
    nexits:
      sum: 2
      average: 1
      min: 0
      max: 1
    cognitive:
      sum: 2
      average: 1
      min: 0
      max: 2
    cyclomatic:
      sum: 4
      average: 1.333
      min: 1
      max: 2
    halstead:
      n1: 10
      N1: 20
      n2: 9
      N2: 12
      length: 32
      estimated_program_length: 61.749
      purity_ratio: 1.93
      vocabulary: 19
      volume: 135.934
      difficulty: 6.667
      level: 0.15
      effort: 906.225
      time: 50.346
      bugs: 0.031
    loc:
      sloc: 7
      ploc: 6
      lloc: 1
      cloc: 0
      blank: 1
      sloc_average: 2.333
      ploc_average: 2
      lloc_average: 0.333
      cloc_average: 0
      blank_average: 0.333
      sloc_min: 3
      sloc_max: 3
      cloc_min: 0
      cloc_max: 0
      ploc_min: 3
      ploc_max: 3
      lloc_min: 0
      lloc_max: 1
      blank_min: 0
      blank_max: 0
    nom:
      functions: 2
      closures: 0
      functions_average: 0.667
      closures_average: 0
      total: 2
      average: 0.667
      functions_min: 0
      functions_max: 1
      closures_min: 0
      closures_max: 0
    mi:
      mi_original: 113.013
      mi_sei: 87.75
      mi_visual_studio: 66.089
    working_memory:
      sum: 3
      average: 1.5
      min: 0
      max: 2
health:
  path: "[filepath]"
  quality: 94.137
  grade: excellent
  maintainability_index: 66.089
  functions:
    - name: add
      start_line: 1
      end_line: 3
      quality: 90.907
      grade: excellent
      scores:
        control_flow:
          name: control flow
          score: 99.01
          measures:
            - name: cognitive complexity
              value: 0
              threshold: 15
              score: 100
            - name: cyclomatic complexity
              value: 1
              threshold: 10
              score: 99.01
        size:
          name: size
          score: 100
          measures:
            - name: statements
              value: 0
              threshold: 30
              score: 100
        vocabulary:
          name: vocabulary load
          score: 80.886
          measures:
            - name: working memory
              value: 2
              threshold: 8
              score: 94.118
            - name: Halstead difficulty
              value: 5.833
              threshold: 12
              score: 80.886
        interface:
          name: interface
          score: 80
          measures:
            - name: parameters
              value: 2
              threshold: 4
              score: 80
    - name: describe
      start_line: 5
      end_line: 7
      quality: 94.137
      grade: excellent
      scores:
        control_flow:
          name: control flow
          score: 96.154
          measures:
            - name: cognitive complexity
              value: 2
              threshold: 15
              score: 98.253
            - name: cyclomatic complexity
              value: 2
              threshold: 10
              score: 96.154
        size:
          name: size
          score: 99.889
          measures:
            - name: statements
              value: 1
              threshold: 30
              score: 99.889
        vocabulary:
          name: vocabulary load
          score: 86.863
          measures:
            - name: working memory
              value: 1
              threshold: 8
              score: 98.462
            - name: Halstead difficulty
              value: 4.667
              threshold: 12
              score: 86.863
        interface:
          name: interface
          score: 94.118
          measures:
            - name: parameters
              value: 1
              threshold: 4
              score: 94.118
